--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -1,4 +1,4 @@
-name: Docker CI - Build & Push Backend
+name: Docker CI - Build & Push Backend & Frontend
 
 on:
   push:
@@ -22,9 +22,16 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
+      - name: Build & push backend
         uses: docker/build-push-action@v5
         with:
           context: ./backend
           push: true
           tags: ivonakirevska/volunteerapp-backend:latest
+
+      - name: Build & push frontend
+        uses: docker/build-push-action@v5
+        with:
+          context: ./volunteer-appl-frontend
+          push: true
+          tags: ivonakirevska/volunteerapp-frontend:latest
